fix: fit height mode
Horizontal scroll not working yet

--- a/src/components/ui/project/irysmanga/styles/Reader.module.css
+++ b/src/components/ui/project/irysmanga/styles/Reader.module.css
@@ -1,3 +1,3 @@
 .pageContainer {
-    @apply grow max-w-full hover:cursor-pointer overflow-y-auto relative overflow-x-scroll flex flex-col items-center gap-[10px];
+    @apply grow max-w-full hover:cursor-pointer overflow-auto flex flex-col items-center gap-[10px];
 }
